--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: Platane/snk@v3
         with:
-          github_user_name: viktoryashchuk
+          github_user_name: Viktor-Yashchuk
           outputs: dist/github-contribution-grid-snake.svg
 
       - name: Push Snake Animation
