--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,11 +2,8 @@ name: Generate Snake 🐍
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *"   
   workflow_dispatch:
-  push:
-    branches:
-      - main
 
 permissions:
   contents: write
@@ -14,15 +11,26 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      
       - name: Generate snake animation
         uses: Platane/snk@v3
         with:
-          github_user_name: Viktor-Yashchuk
-          outputs: dist/github-contribution-grid-snake.svg
+          github_user_name: Viktor-Yashchuk     
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.gif
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push snake animation to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
